# libphp-rs

./: Cargo.toml  build.rs
examples/: array.rs  bind.rs  call.rs  context.rs  function.rs  on_init.rs  scripts.rs
examples/scripts/: hello.php
src/: lib.rs  rust-sapi.c  rust-sapi.h  wrapper.c  wrapper.h
src/exec/: context.rs
src/sapi/: embedded.rs  mod.rs  raw.rs  safe.rs
src/value/: array.rs  int.rs  mod.rs  string.rs
