[package]
name = "libphp"
description = "Rust bindings to PHP's C API (via libphp)."
keywords = ["php", "binding", "bindings", "c", "sys"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71"
cc = "1.0.83"
num_cpus = "1.16.0"

[dependencies]
tracing = "0.1.41"

[features]
amqp = []
apcu = []
ast = []
bcmath = []
bz2 = []
calendar = []
ctype = []
curl = []
dba = []
dio = []
dom = []
ds = []
enchant = []
event = []
exif = []
# Only on certain systems right now
ffi = []
fileinfo = []
filter = []
ftp = []
gd = []
gettext = []
# Only on certain systems right now 
glfw = []
gmp = []
gmssl = []
grpc = []
iconv = []
igbinary = []
imagick = []
imap = []
# Only on certain systems right now
inotify = []
intl = []
ldap = []
libxml = []
mbregex = []
mbstring = []
# TODO = []
# mcrypt = []
memcache = []
# Only on certain systems right now
memcached = []
mongodb = []
msgpack = []
mysqli = ["__zlib"]
mysqlnd = []
# TODO
# oci8 = []
# Always on
opcache = []
openssl = []
opentelemetry = []
parallel = []
password-argon2 = []
# Only on certain systems right now
pcntl = []
pdo = []
pdo_mysql = []
pdo_pgsql = []
pdo_sqlite = []
pdo_sqlsrv = []
pgsql = []
phar = []
posix = []
protobuf = []
# Only on certain systems right now
rar = []
rdkafka = []
readline = []
redis = []
session = []
shmop = []
simdjson = []
simplexml = []
snappy = []
soap = []
sockets = []
sodium = []
spx = []
sqlite3 = []
sqlsrv = []
ssh2 = []
swoole = []
swoole-hook-mysql = ["swoole"]
# Only on certain systems right now
swoole-hook-pgsql = ["swoole"]
swoole-hook-sqlite = ["swoole"]
swow = []
sysvmsg = []
sysvsem = []
sysvshm = []
tidy = []
tokenizer = []
uuid = []
uv = []
# TODO
# xdebug = []
xhprof = []
xlswriter = []
xml = []
xmlreader = []
xmlwriter = []
xsl = []
yac = []
yaml = []
zip = []
zlib = ["__zlib"]
zstd = []
__zlib = []
zts = []

default = ["zts"]
